@@ -19,6 +19,9 @@ import org.jspecify.annotations.Nullable;
 import org.openrewrite.Incubating;
 import org.openrewrite.internal.AdaptiveRadixTree;
 
+import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
+
 @Incubating(since = "8.38.0")
 public class AdaptiveRadixJavaTypeCache extends JavaTypeCache {
 
@@ -27,12 +30,12 @@ public class AdaptiveRadixJavaTypeCache extends JavaTypeCache {
     @Override
     public <T> @Nullable T get(String signature) {
         //noinspection unchecked
-        return (T) typeCache.search(signature);
+        return (T) typeCache.search(getKeyBytes(signature));
     }
 
     @Override
     public void put(String signature, Object o) {
-        typeCache.insert(signature, o);
+        typeCache.insert(getKeyBytes(signature), o);
     }
 
     @Override
@@ -45,5 +48,67 @@ public class AdaptiveRadixJavaTypeCache extends JavaTypeCache {
         AdaptiveRadixJavaTypeCache clone = (AdaptiveRadixJavaTypeCache) super.clone();
         clone.typeCache = this.typeCache.copy();
         return clone;
+    }
+
+    private static final @Nullable Field STRING_VALUE;
+    private static final @Nullable Field STRING_CODER;
+    private static final boolean USE_REFLECTION;
+
+    static {
+        Field value;
+        Field coder;
+        boolean hasCompactStrings = false;
+
+        try {
+            // requires: --add-opens java.base/java.lang=ALL-UNNAMED
+            value = String.class.getDeclaredField("value");
+            value.setAccessible(true);
+
+            try {
+                coder = String.class.getDeclaredField("coder");
+                coder.setAccessible(true);
+                Field compactStrings = String.class.getDeclaredField("COMPACT_STRINGS");
+                compactStrings.setAccessible(true);
+                hasCompactStrings = compactStrings.getBoolean(null);
+            } catch (NoSuchFieldException e) {
+                // Java 8 - field doesn't exist
+                coder = null;
+            }
+        } catch (Exception e) {
+            value = null;
+            coder = null;
+        }
+
+        STRING_VALUE = value;
+        STRING_CODER = coder;
+        USE_REFLECTION = STRING_VALUE != null && STRING_CODER != null && hasCompactStrings;
+    }
+
+    /**
+     * For ASCII and Latin-1 strings this operation is allocation-free.
+     */
+    static byte[] getKeyBytes(String s) {
+        // Try to get internal representation first
+        if (USE_REFLECTION) {
+            try {
+                //noinspection DataFlowIssue
+                byte[] bytes = (byte[]) STRING_VALUE.get(s);
+                //noinspection DataFlowIssue
+                byte coder = (byte) STRING_CODER.get(s);
+                if (coder == 0) {
+                    // Latin1, use directly
+                    return bytes;
+                } else {
+                    // UTF-8: append NUL byte to avoid collisions
+                    byte[] prefixed = new byte[bytes.length + 1];
+                    System.arraycopy(bytes, 0, prefixed, 0, bytes.length);
+                    prefixed[bytes.length] = 0;
+                    return prefixed;
+                }
+            } catch (Exception ignored) {
+            }
+        }
+
+        return s.getBytes(StandardCharsets.UTF_8);
     }
 }
